---------------------------------------------------------------------------------------------------
Version: 3.5.9
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 3.5.8
Date: 2024-05-05
  Changes:
    - Updated translations from Crowdin.
  Bugfixes:
    - Fixed a crash when migrating from a Recipe Book version older than 3.0. (#162)
---------------------------------------------------------------------------------------------------
Version: 3.5.7
Date: 2023-11-24
  Changes:
    - Show entities as available from the start if they are placed by items whose recipes are available at start. (#145)
  Bugfixes:
    - Fixed crashes when table content elements somehow get invalidated. (#136)
    - Fixed labs not being shown as a placed result. (#145)
    - Fixed potential issues when recursively unlocking rocket launch products. (#144)
---------------------------------------------------------------------------------------------------
Version: 3.5.6
Date: 2023-08-21
  Bugfixes:
    - [Reverse factory] Fixed that recycling recipes would cause many items to incorrectly show as researched (#133)
---------------------------------------------------------------------------------------------------
Version: 3.5.5
Date: 2023-07-01
  Bugfixes:
    - Fixed a crash on load when a force is invalidated (#131)
---------------------------------------------------------------------------------------------------
Version: 3.5.4
Date: 2023-06-11
  Bugfixes:
    - Fixed a crash when calling `/rb-print-object` with no parameters (#128)
---------------------------------------------------------------------------------------------------
Version: 3.5.3
Date: 2023-04-29
  Bugfixes:
    - Fixed a crash when migrating from before version 3.0
    - Fixed that characters were not showing as being able to craft recipes
---------------------------------------------------------------------------------------------------