@@ -2,7 +2,6 @@ local gui = require("__flib__.gui")
 
 local constants = require("constants")
 
-local database = require("scripts.database")
 local formatter = require("scripts.formatter")
 local util = require("scripts.util")
 
@@ -57,7 +56,7 @@ function Gui:update_contents()
 
   local show_made_in = self.player_table.settings.general.content.show_made_in_in_quick_ref
 
-  local recipe_data = database.recipe[self.recipe_name]
+  local recipe_data = global.database.recipe[self.recipe_name]
   local player_data = formatter.build_player_data(self.player, self.player_table)
 
   -- Label
@@ -82,7 +81,7 @@ function Gui:update_contents()
     local buttons = table.children
     local i = 0
     for _, object in pairs(recipe_data[source]) do
-      local object_data = database[object.class][object.name]
+      local object_data = global.database[object.class][object.name]
       local blueprint_result = source == "made_in" and { name = object.name, self.recipe_name } or nil
       local object_info = formatter(object_data, player_data, {
         always_show = source ~= "made_in",
