@@ -4,7 +4,6 @@ local table = require("__flib__.table")
 
 local constants = require("constants")
 
-local database = require("scripts.database")
 local formatter = require("scripts.formatter")
 local gui_util = require("scripts.gui.util")
 local util = require("scripts.util")
@@ -199,7 +198,7 @@ function actions.update_search_results(Gui, _, _)
             end
 
             if matched then
-              local obj_data = database[class][internal]
+              local obj_data = global.database[class][internal]
 
               -- Check temperature settings
               local passed = true
