@@ -2,6 +2,7 @@
 Version: 3.5.9
 Date: ????
   Changes:
+    - Moved the database back into the save file instead of regenerating it during load.
 ---------------------------------------------------------------------------------------------------
 Version: 3.5.8
 Date: 2024-05-05
